<resources>
    <string name="app_name">Cabber</string>
    <string name="google_maps_key">AIzaSyDUX0mKbLAHawb5ZDidL1n9wEVSg8rKqVs</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook">Facebook</string>
    <string name="or_continue_with">OR CONTINUE WITH</string>
    <string name="password_">Password?</string>
    <string name="forgot">Forgot</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user_">New user?</string>
    <string name="google">Google</string>
    <string name="enter_confirmation_code_sent_to_you_on_your_sms">Enter confirmation code sent to you on your SMS!</string>
    <string name="next">NEXT</string>
    <string name="first_name">First Name</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="already_registered_">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_code">CVV Code</string>
    <string name="add_card">ADD CARD</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
