<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.verbosetech.caber_native_rider.activities.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="52dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/input_merged_edittext"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:fontFamily="@font/sansation_regular"
                    android:paddingStart="18dp"
                    android:paddingLeft="18dp"
                    android:paddingTop="12dp"
                    android:text="@string/phone_number"
                    android:textSize="11sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:inputType="phone"
                    android:maxLines="10"
                    android:paddingEnd="8dp"
                    android:textDirection="rtl"
                    android:textSize="11sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/input_merged_edittext"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:fontFamily="@font/sansation_regular"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="12dp"
                    android:text="@string/password"
                    android:textSize="11sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:inputType="textPassword"
                    android:layoutDirection="rtl"
                    android:paddingEnd="8dp"
                    android:textDirection="rtl"
                    android:textSize="11sp" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_logged_in"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.1"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <LinearLayout
                android:id="@+id/nav_login_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="36dp"
                android:layout_marginBottom="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nav_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:padding="4dp"
                    android:text="@string/new_user_sign_up"
                    android:textColor="@color/text_Color"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="end"
                    android:padding="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_Color"
                    android:textSize="11sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/or_continue_with"
                android:textColor="@color/text_Color"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/socialAuthContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="28dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="11dp"
                    android:background="@drawable/input_merged_edittext"
                    android:backgroundTint="#2553b4"
                    android:drawableStart="@drawable/com_facebook_button_icon"
                    android:elevation="4dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:paddingLeft="9.3dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:background="@drawable/input_merged_edittext"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/googleg_standard_color_18"
                    android:elevation="4dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:paddingLeft="9.3dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="#2d2c2c" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
