<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="284dp"
        android:layout_height="160dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@drawable/visa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_merged_edittext"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.03">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:fontFamily="@font/sansation_regular"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/card_number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="174dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/input_merged_edittext"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/grey"
                android:fontFamily="@font/sansation_regular"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:text="@string/expiry_date"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:inputType="phone" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="169dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/input_merged_edittext"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.851">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/grey"
                android:fontFamily="@font/sansation_regular"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:text="@string/cvv_code"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/grey"
                android:inputType="phone" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/sansation_bold"
        android:text="@string/add_card"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.733" />



</android.support.constraint.ConstraintLayout>